# qt-syrec-editor

./: .gitignore  CMakeLists.txt
cmake/: ExternalDependencies.cmake
include/qtWidgets/: circuit_view_widget.hpp  code_editor_widget.hpp  main_widget.hpp
src/: CMakeLists.txt  main.cpp
src/qtWidgets/: main_widget.cpp
